--- a/LeaveRequestApp/Src/NewLeaveRequest.fx.yaml
+++ b/LeaveRequestApp/Src/NewLeaveRequest.fx.yaml
@@ -14,27 +14,36 @@ NewLeaveRequest As screen:
         Icon: =Icon.Save
         OnSelect: |-
             =//Form kliensoldali validáció
-            If(!IsBlank(locStartDateValid),Notify("Check the Start Date value"));
-            
             If(
+                !IsBlank(locStartDateValid),
+                Notify("Check the Start Date value"),
+                If(
                 //Mi a típusa a szabadságnak, amit ki szeretnénk venni
-                DataCardValue8.Selected.Value = "Vacation",
-                UpdateContext(
-                    {
-                        locCurrentLeave: LookUp(
-                            'Éves Szabadságok 2022 Levelező_1',
-                            Employee.Email = gloUser.Email,
-                            'Current leave'
-                        )
-                    }
-                );
+                    DataCardValue8.Selected.Value = "Vacation",
+                    UpdateContext(
+                        {
+                            locCurrentLeave: LookUp(
+                                'Éves Szabadságok 2022 Levelező_1',
+                                Employee.Email = gloUser.Email,
+                                'Current leave'
+                            )
+                        }
+                    );
                 //Itt határozom meg, hogy mennyi szabadságot kívánunk kivenni
-                UpdateContext({locVacationDb:DataCardValue7.SelectedDate - DataCardValue6.SelectedDate + 1});
-                UpdateContext({locNewVacationCount:locCurrentLeave - locVacationDb});
-                Patch('Éves Szabadságok 2022 Levelező_1',LookUp('Éves Szabadságok 2022 Levelező_1',Employee.Email=gloUser.Email),
-                {'Current leave':locNewVacationCount})
+            UpdateContext({locVacationDb: DataCardValue7.SelectedDate - DataCardValue6.SelectedDate + 1});
+                    UpdateContext({locNewVacationCount: locCurrentLeave - locVacationDb});
+                    Patch(
+                        'Éves Szabadságok 2022 Levelező_1',
+                        LookUp(
+                            'Éves Szabadságok 2022 Levelező_1',
+                            Employee.Email = gloUser.Email
+                        ),
+                        {'Current leave': locNewVacationCount}
+                    )
+                );
+                SubmitForm(frmNewLeaverRequest)
             );
-            SubmitForm(frmNewLeaverRequest)
+            NewForm(frmNewLeaverRequest);
         X: =561
         Y: =9
         ZIndex: =2
