--- a/LeaveRequestApp/Src/NewLeaveRequest.fx.yaml
+++ b/LeaveRequestApp/Src/NewLeaveRequest.fx.yaml
@@ -15,7 +15,7 @@ NewLeaveRequest As screen:
         OnSelect: |-
             =//Form kliensoldali validáció
             If(
-                !IsBlank(locStartDateValid),
+                IsBlank(locStartDateValid),
                 Notify("Check the Start Date value"),
                 If(
                 //Mi a típusa a szabadságnak, amit ki szeretnénk venni
