--- a/LeaveRequestApp/Src/Main.fx.yaml
+++ b/LeaveRequestApp/Src/Main.fx.yaml
@@ -61,6 +61,7 @@ Main As screen:
     btnMyNewLeaveList As button:
         Fill: =RGBA(158, 11, 15, 1)
         Height: =70
+        OnSelect: =Navigate(MyLeaveList)
         RadiusBottomLeft: =45
         RadiusBottomRight: =45
         RadiusTopLeft: =45
