--- a/LeaveRequestApp/Src/MyLeaveList.fx.yaml
+++ b/LeaveRequestApp/Src/MyLeaveList.fx.yaml
@@ -27,7 +27,12 @@ MyLeaveList As screen:
         Fill: =RGBA(0, 0, 0, 0)
         HeadingSize: =21
         Height: =Parent.Height
-        Items: =Filter(LeaveRequest,'Leave Type'.Value=Dropdown1.Selected.Value,Létrehozta.Email)
+        Items: |-
+            =Filter(
+                LeaveRequest,
+                'Leave Type'.Value = Dropdown1.Selected.Value,
+                Létrehozta.Email = gloUser.Email
+            )
         Size: =21
         Width: =Parent.Width
         X: =0
