--- a/LeaveRequestApp/CanvasManifest.json
+++ b/LeaveRequestApp/CanvasManifest.json
@@ -100,6 +100,7 @@
   "ScreenOrder": [
     "Main",
     "NewLeaveRequest",
-    "MyLeaveList"
+    "MyLeaveList",
+    "AnnualHolidaysAdministration"
   ]
 }
