--- a/LeaveRequestApp/Src/Main.fx.yaml
+++ b/LeaveRequestApp/Src/Main.fx.yaml
@@ -76,6 +76,7 @@ Main As screen:
     btnAnnualHolidayAdministration As button:
         Fill: =RGBA(158, 11, 15, 1)
         Height: =70
+        OnSelect: =Navigate(AnnualHolidaysAdministration)
         RadiusBottomLeft: =45
         RadiusBottomRight: =45
         RadiusTopLeft: =45
