--- a/LeaveRequestApp/Src/AnnualHolidaysAdministration.fx.yaml
+++ b/LeaveRequestApp/Src/AnnualHolidaysAdministration.fx.yaml
@@ -29,9 +29,16 @@ AnnualHolidaysAdministration As screen:
 
     Gallery1 As gallery.galleryVertical:
         Height: =354
-        Items: ='Éves Szabadságok 2022 Levelező_1'
+        Items: |-
+            =Filter(
+                'Éves Szabadságok 2022 Levelező_1',
+                StartsWith(
+                    Employee.DisplayName,
+                    TextInput1.Text
+                )
+            )
         Layout: =Layout.Vertical
-        TemplateSize: =146
+        TemplateSize: =77
         Y: =219
         ZIndex: =2
 
@@ -41,6 +48,8 @@ AnnualHolidaysAdministration As screen:
             Size: =21
             Text: =ThisItem.Employee.DisplayName
             Width: =307
+            X: =16
+            Y: =8
             ZIndex: =1
 
         Label3_1 As label:
@@ -49,7 +58,7 @@ AnnualHolidaysAdministration As screen:
             Size: =21
             Text: =ThisItem.'Annual leave' & " db"
             Width: =88
-            X: =307
+            X: =323
             ZIndex: =4
 
         Label3_2 As label:
@@ -58,8 +67,15 @@ AnnualHolidaysAdministration As screen:
             Size: =21
             Text: =ThisItem.'Current leave' & " db"
             Width: =88
-            X: =412
+            X: =478
             ZIndex: =5
+
+        Icon4 As icon.ChevronRight:
+            Icon: =Icon.ChevronRight
+            OnSelect: =Select(Parent)
+            X: =566
+            Y: =8
+            ZIndex: =6
 
     Label5 As label:
         Align: =Align.Center
@@ -80,7 +96,7 @@ AnnualHolidaysAdministration As screen:
         Size: =21
         Text: ="Annual leave"
         Width: =178
-        X: =268
+        X: =286
         Y: =149
         ZIndex: =4
 
@@ -91,7 +107,7 @@ AnnualHolidaysAdministration As screen:
         Height: =70
         Size: =21
         Text: ="Current leave"
-        Width: =178
+        Width: =133
         X: =462
         Y: =149
         ZIndex: =5
@@ -104,4 +120,226 @@ AnnualHolidaysAdministration As screen:
         Width: =Parent.Width
         Y: =64
         ZIndex: =6
+
+    Form1 As form:
+        DataSource: ='Éves Szabadságok 2022 Levelező_1'
+        Width: =640
+        Y: =491
+        ZIndex: =7
+
+        Employee_DataCard1 As typedDataCard.comboBoxEditCard:
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="Employee"
+            Default: =ThisItem.Employee
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@'Éves Szabadságok 2022 Levelező_1'],DataSourceInfo.DisplayName,"Employee")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            Required: =false
+            Update: =DataCardValue2.Selected
+            Width: =640
+            X: =0
+            Y: =0
+            ZIndex: =8
+
+            DataCardKey2 As label:
+                AutoHeight: =true
+                Height: =48
+                Size: =21
+                Text: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                Wrap: =false
+                X: =30
+                Y: =10
+                ZIndex: =1
+
+            DataCardValue2 As combobox:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                DefaultSelectedItems: =Parent.Default
+                DisplayFields: =["DisplayName","Email","Picture"]
+                DisplayMode: =Parent.DisplayMode
+                Height: =70
+                Items: =Choices([@'Éves Szabadságok 2022 Levelező_1'].Employee)
+                PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
+                SearchFields: =["DisplayName"]
+                SearchItems: =Choices('Éves Szabadságok 2022 Levelező_1'.Employee,DataCardValue2.SearchText)
+                SelectMultiple: =false
+                Size: =21
+                Template: =ListItemTemplate.Person
+                Tooltip: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardKey2.Y + DataCardKey2.Height + 5
+                ZIndex: =2
+
+            ErrorMessage2 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =24
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue2.Y + DataCardValue2.Height
+                ZIndex: =3
+
+            StarVisible2 As label:
+                Align: =Align.Center
+                Height: =DataCardKey2.Height
+                Size: =21
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey2.Y
+                ZIndex: =4
+
+        "'Annual leave_DataCard1' As typedDataCard.numberEditCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="Annualleave"
+            Default: =ThisItem.'Annual leave'
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@'Éves Szabadságok 2022 Levelező_1'],DataSourceInfo.DisplayName,"Annualleave")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            Required: =false
+            Update: =Value(DataCardValue3.Text)
+            Width: =640
+            X: =0
+            Y: =1
+            ZIndex: =8
+
+            DataCardKey3 As label:
+                AutoHeight: =true
+                Height: =48
+                Size: =21
+                Text: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                Wrap: =false
+                X: =30
+                Y: =10
+                ZIndex: =1
+
+            DataCardValue3 As text:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                Default: =Parent.Default
+                DelayOutput: =true
+                DisplayMode: =Parent.DisplayMode
+                Format: =TextFormat.Number
+                Height: =70
+                PaddingLeft: =5
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Size: =21
+                Tooltip: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardKey3.Y + DataCardKey3.Height + 5
+                ZIndex: =2
+
+            ErrorMessage3 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =24
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue3.Y + DataCardValue3.Height
+                ZIndex: =3
+
+            StarVisible3 As label:
+                Align: =Align.Center
+                Height: =DataCardKey3.Height
+                Size: =21
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey3.Y
+                ZIndex: =4
+
+        "'Current leave_DataCard1' As typedDataCard.numberEditCard":
+            BorderStyle: =BorderStyle.Solid
+            DataField: ="Currentleave"
+            Default: =ThisItem.'Current leave'
+            DisplayMode: =Parent.DisplayMode
+            DisplayName: =DataSourceInfo([@'Éves Szabadságok 2022 Levelező_1'],DataSourceInfo.DisplayName,"Currentleave")
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =50
+            Required: =false
+            Update: =Value(DataCardValue4.Text)
+            Width: =640
+            X: =0
+            Y: =2
+            ZIndex: =8
+
+            DataCardKey4 As label:
+                AutoHeight: =true
+                Height: =48
+                Size: =21
+                Text: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                Wrap: =false
+                X: =30
+                Y: =10
+                ZIndex: =1
+
+            DataCardValue4 As text:
+                BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                Default: =Parent.Default
+                DelayOutput: =true
+                DisplayMode: =Parent.DisplayMode
+                Format: =TextFormat.Number
+                Height: =70
+                PaddingLeft: =5
+                RadiusBottomLeft: =0
+                RadiusBottomRight: =0
+                RadiusTopLeft: =0
+                RadiusTopRight: =0
+                Size: =21
+                Tooltip: =Parent.DisplayName
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardKey4.Y + DataCardKey4.Height + 5
+                ZIndex: =2
+
+            ErrorMessage4 As label:
+                AutoHeight: =true
+                Height: =10
+                Live: =Live.Assertive
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =24
+                Text: =Parent.Error
+                Visible: =Parent.DisplayMode=DisplayMode.Edit
+                Width: =Parent.Width - 60
+                X: =30
+                Y: =DataCardValue4.Y + DataCardValue4.Height
+                ZIndex: =3
+
+            StarVisible4 As label:
+                Align: =Align.Center
+                Height: =DataCardKey4.Height
+                Size: =21
+                Text: ="*"
+                Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                Width: =30
+                Wrap: =false
+                Y: =DataCardKey4.Y
+                ZIndex: =4
 
